# cloakcat-c2-framwork

./: CLAUDE.md
.cargo/: config.toml
cat-agent/: Cargo.toml  build.rs
cat-agent/src/: beacon.rs  codec.rs  config.rs  exec.rs  lib.rs  main.rs  transport.rs
cat-agent/src/bof/: beacon_api.rs  coff_parser.rs  loader.rs  mod.rs
cat-agent/src/evasion/: mod.rs  patch.rs  ppid.rs  sleep_mask.rs  syscall.rs
cat-agent/src/io/: mod.rs  win_handle.rs  win_pipe.rs
cat-agent/src/protocol/: envelope.rs
cat-agent/src/srdi/: converter.rs  mod.rs
cat-agent/src/tasks/: assembly.rs  fs.rs  inject.rs  lateral.rs  mod.rs  token.rs
cat-agent/src/transport/: mod.rs  pipe.rs
cat-agent/src/tunnel/: mod.rs  socks5.rs
cat-cli/: Cargo.toml
cat-cli/src/: build.rs  commands.rs  http.rs
cat-cli/src/commands/: build.rs  listener.rs  mod.rs  transfer.rs
cat-server/: Cargo.toml
cat-server/src/: config.rs  error.rs  handlers.rs  main.rs  middleware.rs  routes.rs  service.rs  state.rs  validation.rs
cat-server/src/tunnel/: mod.rs
cloakcat-protocol/: Cargo.toml
cloakcat-protocol/src/: lib.rs  malleable.rs  paths.rs  profile.rs  types.rs
config/: server.toml
config/profiles/: amazon.toml  default.toml  google.toml
