[package]
name = "cat-agent"
version = "0.1.0"
edition = "2024"

[lib]
name = "cat_agent"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cat-agent"
path = "src/main.rs"

[dependencies]
cloakcat-protocol = { path = "../cloakcat-protocol" }
anyhow = "1.0.100"
base64 = "0.22"
rand = "0.9.2"
serde_json = "1.0.145"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
serde = { version = "1.0.226", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
get_if_addrs = "0.5"
socket2 = { version = "0.5", features = ["all"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Com",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_Diagnostics_ToolHelp",
] }
