[package]
name = "catctl"
version = "0.1.0"
edition = "2021"

[dependencies]
cloakcat-protocol = { path = "../cloakcat-protocol" }
cat-agent = { path = "../cat-agent" }
anyhow = "1"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
rustyline = "17.0.2"
shell-words = "1"
ctrlc = "3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
colored = "2"
comfy-table = "7"
base64 = "0.22"
urlencoding = "2"
aes-gcm = "0.10"
rand = "0.9"
hex = "0.4"