[package]
name = "cat-server"
version = "0.1.0"
edition = "2024"

[dependencies]
cloakcat-protocol = { path = "../cloakcat-protocol" }
ring = "0.17.14"
subtle = "2.6"
axum = "0.8.4"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
base64 = "0.22.1"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros", "json"] }
dotenvy = "0.15"
anyhow = "1.0.100"
toml = "0.8"
